--- a/templates/cv/index.html
+++ b/templates/cv/index.html
@@ -29,6 +29,15 @@
       background-color: #3b93c5;
     }
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-37XK24V10L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-37XK24V10L');
+  </script>
 </head>
 
 <body>
