--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,207 @@
-403 Forbidden
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="style.css">
+
+  <title>Web Templates by Heri Gunawan</title>
+</head>
+
+<body id="home">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Heri Gunawan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="jumbotron text-center text-light">
+    <img src="img/heri-gunawan.png" alt="Heri Gunawan" width="200" class="rounded-circle img-thumbnail" />
+    <h1 class="display-4">Heri Gunawan</h1>
+    <p class="lead">Web Developer</p>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#FFFFFF" fill-opacity="1"
+        d="M0,288L15,250.7C30,213,60,139,90,101.3C120,64,150,64,180,106.7C210,149,240,235,270,266.7C300,299,330,277,360,240C390,203,420,149,450,138.7C480,128,510,160,540,176C570,192,600,192,630,170.7C660,149,690,107,720,90.7C750,75,780,85,810,117.3C840,149,870,203,900,240C930,277,960,299,990,272C1020,245,1050,171,1080,128C1110,85,1140,75,1170,90.7C1200,107,1230,149,1260,160C1290,171,1320,149,1350,128C1380,107,1410,85,1425,74.7L1440,64L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+
+  <section id="about">
+    <div class="container">
+      <div class="row text-center mb-3">
+        <div class="col">
+          <h2>About Me</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-4">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet neque reiciendis optio molestias, maxime
+          asperiores itaque error praesentium, quaerat, at fugit sed non ut odit amet suscipit. Earum, quisquam
+          explicabo.
+        </div>
+        <div class="col-md-4">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit laborum earum animi debitis? Sed
+          facilis quia cum dignissimos eos, quod ipsam saepe voluptatibus aperiam ab sequi laborum fugiat maxime atque.
+        </div>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#3b93c5" fill-opacity="1"
+        d="M0,320L15,282.7C30,245,60,171,90,160C120,149,150,203,180,202.7C210,203,240,149,270,112C300,75,330,53,360,58.7C390,64,420,96,450,90.7C480,85,510,43,540,32C570,21,600,43,630,96C660,149,690,235,720,256C750,277,780,235,810,229.3C840,224,870,256,900,234.7C930,213,960,139,990,90.7C1020,43,1050,21,1080,42.7C1110,64,1140,128,1170,133.3C1200,139,1230,85,1260,90.7C1290,96,1320,160,1350,160C1380,160,1410,96,1425,64L1440,32L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <div class="row text-center text-light mb-3">
+        <div class="col">
+          <h2>My Projects</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/p1.jpg" class="card-img-top" alt="project 1" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/p2.jpg" class="card-img-top" alt="project 2" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/p3.jpg" class="card-img-top" alt="project 3" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/p4.jpg" class="card-img-top" alt="project 4" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/p5.jpg" class="card-img-top" alt="project 5" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#ffffff" fill-opacity="1"
+        d="M0,224L15,208C30,192,60,160,90,128C120,96,150,64,180,80C210,96,240,160,270,197.3C300,235,330,245,360,208C390,171,420,85,450,74.7C480,64,510,128,540,165.3C570,203,600,213,630,224C660,235,690,245,720,250.7C750,256,780,256,810,261.3C840,267,870,277,900,266.7C930,256,960,224,990,213.3C1020,203,1050,213,1080,213.3C1110,213,1140,203,1170,213.3C1200,224,1230,256,1260,229.3C1290,203,1320,117,1350,85.3C1380,53,1410,75,1425,85.3L1440,96L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col">
+          <h2>Contact Me</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Thanks!</strong> Your message has been sent.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <div class="alert alert-danger alert-dismissible fade show d-none" role="alert">
+            <strong>Oops!</strong> Something went wrong.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="contact">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+              <label for="msg" class="form-label">Message</label>
+              <textarea name="message" id="" cols="30" rows="10" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
+          </form>
+        </div>
+      </div>
+    </div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#000000" fill-opacity="1"
+        d="M0,192L34.3,170.7C68.6,149,137,107,206,74.7C274.3,43,343,21,411,53.3C480,85,549,171,617,213.3C685.7,256,754,256,823,245.3C891.4,235,960,213,1029,192C1097.1,171,1166,149,1234,144C1302.9,139,1371,149,1406,154.7L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+
+  <footer class="text-center text-white pb-5">
+    <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/aageboi/"
+        class="text-white fw-bold">Heri Gunawan</a></p>
+  </footer>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
